# tfc-main-repo

./: .gitignore  README.md
.github/workflows/: checkov.yaml   main.yml  yor.yml
00-base-aws/: README.md  main.tf  variables.tf
aws-config/: README.md  cloud.tf  main.tf  variables.tf
aws-microservice/: main.tf  microservice-1.tf
checkov-workshop/: README.md
checkov-workshop/code/: deployment_ec2.tf  deployment_s3.tf  simple_ec2.tf  simple_s3.tf
checkov-workshop/code/custom-checks/: environment_tag_policy.yaml
checkov-workshop/code/terraform/: simple_ec2.tf
eks-demo-deployments/terraform/default/: alb.tf  cluster.tf  vpc.tf
eks-demo-deployments/terraform/hardened/: alb.tf  bastion.tf  cluster.tf  vpc.tf
eks-demo-deployments/terraform/private/: alb.tf  bastion.tf  cluster.tf  vpc.tf
eks-demo-deployments/tests/aws-iam-system-master-backdoor/: role.tf
eks-demo-deployments/tests/custom-rules/: test.tf
github-actions/terraform/: main.tf  microservice-1.tf
goof-master/: main.tf
goof-master/modules/iam/: main.tf
goof-master/modules/storage/: main.tf
goof-master/modules/subnet/: main.tf
goof-master/modules/vpc/: main.tf
rust-example/: Cargo.toml  event.json  imports.tf  main.tf  rust_lambda.tf  variables.tf
rust-example/src/: event_handler.rs  http_handler.rs  main.rs
rust-example/src/gemini/: mod.rs  requests.rs
rust-example/src/output/: mod.rs
vulnerable-ec2/: main.tf  variables.tf
