[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.21"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
thiserror = "2.0.11"
futures = "0.3"
async-stream = "0.3.6"
base64 = "0.22.1"

tokio = { version = "1.45", features = ["full"] }